# rust_microservice

./: README.md  docker-compose.yml  package-lock.json  package.json
config/: message.env  post.env  user.env  wallet.env
gateway_service/config/: gateway.config.yml
message_service/: package-lock.json  package.json
message_service/src/: app.ts  server.ts
message_service/src/config/: dev.env  stage.env
message_service/src/helpers/: index.ts
message_service/src/interfaces/: chat.interface.ts  index.ts  message.interface.ts  user.interface.ts
message_service/src/modules/: index.ts
message_service/src/services/: queue.service.ts
message_service/src/socket/: socket.connection.ts
post_service/: package-lock.json  package.json
post_service/src/: app.ts
post_service/src/config/: dev.env  stage.env
post_service/src/constants/: index.ts
post_service/src/interfaces/: block.interface.ts  comment.interface.ts  error.interface.ts  follow.interface.ts  hide.interface.ts  index.ts  like.interface.ts  post.interface.ts  rebent.interface.ts  report.interface.ts  user.interface.ts
post_service/src/middlewares/: jwt.middleware.ts  user.middleware.ts
post_service/src/modules/: index.ts
user_rust_service/: .dockerignore  .env  Cargo.toml  Dockerfile  Rocket.toml
user_rust_service/src/: ampq.rs  db.rs  lib.rs  main.rs
user_rust_service/src/user/: controller.rs
user_service/: package-lock.json  package.json
user_service/src/: app.ts  server.ts
wallet_service/: Dockerfile  package-lock.json  package.json
wallet_service/src/: app.ts
(+95 files in other folders)
